--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         <input id="submit" type="submit" />
       </form>
       <div>
+        <h1>Todo's</h1>
         <ul id="todolist"></ul>
+      </div>
+      <div>
+        <h1>Completed</h1>
+        <ul id="completedList"></ul>
       </div>
     </main>
     <script src="app.js"></script>
